@@ -2,7 +2,7 @@ AcknowledgeAlarm_ErrorMessage=Cannot acknowledge alarm
 AcknowledgeAlarm_JobName=Acknowledge alarms
 AcknowledgeAlarm_TaskName=Acknowledging alarms...
 AlarmComparator_Unknown=<unknown>
-AlarmList_AckBy=Ack By
+AlarmList_AckBy=Ack/Resolve By
 AlarmList_ColumnCount=Count
 AlarmList_ColumnCreated=Created
 AlarmList_ColumnLastChange=Last Change
